# optimos_v2

./: .coveragerc  .cspell-dictionary.txt  .cspell.json  .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  Playground.ipynb  README.md  Readme.md  check_env.py  class_index.html  conftest.py  coverage.xml  create_constraints.py  create_timetable.py  docker-compose.local.yaml  docker-compose.yaml  evaluation_copy.py  fix_seg_fault.py  function_index.html  index.html  lcov.info  main.py  main_profile.py  ppo_training.py  pyproject.toml  run.sh  run_simulation.sh  run_test.sh  status.json  test.py  typos_to_fix.txt  z_170c1340f24c6514___init___py.html  z_170c1340f24c6514_batching_constraints_py.html  z_170c1340f24c6514_constraints_type_py.html  z_170c1340f24c6514_daily_hour_rule_constraints_py.html  z_170c1340f24c6514_large_wt_rule_constraints_py.html  z_170c1340f24c6514_ready_wt_rule_constraints_py.html  (+86 more)
.github/workflows/: ci.yml  format.yml  spellcheck.yml  typecheck.yml
docs/: Actions.md  HillClimb.md  architecture.drawio  flow.drawio
examples/: bpmn_model_splitter.py  generated_log.csv  purchase_constraints.json  purchase_timetable.json
examples/demo/: timetable.json
examples/demo_batching/: constraints.json  model.bpmn  timetable.json
examples/demo_speed/: event_log.csv  model.bpmn  simulation_warnings.txt  stats.csv  timetable.json
examples/two_tasks_batching/: two_tasks_batching.bpmn  two_tasks_batching.json
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.local  nginx.conf  openapi-config.json  package.json  tsconfig.json
frontend/src/: App.tsx  MainView.tsx  Root.tsx  generateConstraints.ts  generateContraints.ts  helpers.ts  index.html  router.tsx
o2/: SimDiffSetupFileless.py  __init__.py  constants.py  evaluator.py  hill_climber.py  optimizer.py  pareto_front.py  simulation_runner.py  store.py
o2/action_selectors/: action_selector.py  ppo_action_selector.py  simulated_annealing_action_selector.py  tabu_action_selector.py
o2/actions/: action_selector.py  add_resource_action.py  add_rule_action.py  add_week_day_rule_action.py  base_action.py  batching_rule_action.py  modify_calendar_base_action.py  modify_calendar_by_cost_action.py  modify_calendar_by_it_action.py  modify_calendar_by_wt_action.py  modify_daily_hour_rule_action.py  modify_datetime_rules_by_enablement.py  modify_large_wt_action.py  modify_large_wt_rule_action.py  modify_ready_wt_action.py  modify_ready_wt_rule_action.py  modify_resource_base_action.py  modify_size_rule_action.py  modify_size_rule_base_action.py  remove_resource_by_cost_action.py  remove_resource_by_utilization.py  remove_resource_by_utilization_action.py  remove_rule_action.py
o2/agents/: agent.py  ppo_agent.py  ppo_agent_random.py  simulated_annealing_agent.py  simulated_annealing_agent_random.py  tabu_agent.py  tabu_agent_random.py
o2/models/: constraints.py  days.py  evaluation.py  json_report.py  json_solution.py  legacy_approach.py  legacy_constraints.py  rule_selector.py  self_rating.py  (+6 more)
o2_evaluation/: data_analyzer.py  data_collector.py  data_downloader.py  generate_scripts.py  redumper.py  redumper_solution_files.py  redumper_solutions.py  scenario_analyzer.py
o2_server/: Dockerfile  optimos_service.py  server.py  server_types.py  types.py
src/: SimDiffSetupFileless.py  action_selector.py  actions.py  evaluator.py  hill_climber.py  pareto_front.py  simulation_runner.py  store.py
tests/: check_env.py  combined_mode_test.py  data_analyzer_test.py  evaluation_test.py  hash_benchmark.py  hill_climber_test.py  optimizer_test.py  pareto_front_test.py  pickle_benchmark.py  pickle_mem.py  pickle_size.py  ppo_random_test.py  proximal_policy_optimization_test.py  run_simulation.sh  select_variants_test.py  simulated_annealing_test.py  simulation_runner_test.py  simulation_setup_tester.py  solution_test.py  solution_tree_test.py  stat_calculation_helper_test.py  tree_benchmark.py  tree_benchmark_2.py  tree_benchmark_3.py  tree_benchmark_4.py
(+576 files in other folders)
