[tool.poetry]
name = "optimos_v2"
version = "0.0.1"
description = "optimos_v2"
authors = ["Jannis Rosenbaum <jannis@ut.ee>"]
readme = "README.md"
package-mode = true
packages = [{ include = "o2" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.26.4"
dynamik = { git = "https://github.com/sinnaj-r/dynamik.git" }
diffresbp-simulator = { url = "https://github.com/AutomatedProcessImprovement/Prosimos/archive/ab4394c066353ecca57dc5005e0f29ef34458c57.zip" }
click = "^8.1.7"
pandas = "<=2.1.4"
dataclass-wizard = "^0.22.3"
sympy = "^1.12.1"
scipy = "^1.13.0"
intervaltree = { git = "https://github.com/chaimleib/intervaltree.git" }


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["o2"]

[tool.pytest.ini_options]
# addopts = "--cov --cov-report=lcov:lcov.info --cov-report=term"
pythonpath = ["."]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "D",   # Docstring conventions (pydocstyle)
    "N",   # PEP 8 naming conventions
    "W",   # Pycodestyle warnings
    "B",   # Bugbear
    "Q",   # Flake8-quotes
    "ANN", # Annotations (flake8-annotations)
]
ignore = [
    "D100",   # Missing docstring in public module
    "ANN101", # Missing type annotation for self in method
    "D107",
    "ANN202",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN"]
